# cmake_self_taught_tutorial

./: CMakeLists.txt  README.md
step1/: CMakeLists.txt  tutorial.cxx
step10/: CMakeLists.txt
step10/MathFunctions/: CMakeLists.txt  mysqrt.cpp
step11/: CMakeLists.txt  readme.md
step11/MathFunctions/: MakeTable.cxx  MathFunctions.h
step12/: readme.md
step2/: CMakeLists.txt  tutorial.cxx
step2/MathFunctions/: CMakeLists.txt
step3/: CMakeLists.txt  readme.md
step3/MathFunctions/: CMakeLists.txt
step4/: CMakeLists.txt  readme.md
step5/: CMakeLists.txt  readme.md  tutorial.cxx  tutorial.h.in
step5/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
step5/install/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  tutorial_1.sln  tutorial_1.vcxproj  tutorial_1.vcxproj.filters
step5/install/tutorial_1.dir/Debug/: tutorial_1.exe.recipe  tutorial_1.ilk
step5/install/tutorial_1.dir/Debug/tutorial_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
step5/install/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
step5/install/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
step5/install/x64/Debug/INSTALL/: INSTALL.recipe
step5/install/x64/Debug/INSTALL/INSTALL.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
step5/install/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
step5/install/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
step6/: CMakeLists.txt  readme.md
step7/: readme.md
step7/MathFunctions/: CMakeLists.txt  mysqrt.cpp
step8/: CMakeLists.txt  readme.md
step8/MathFunctions/: MakeTable.cmake
step9/: CMakeLists.txt  readme.md
step9/MathFunctions/: CMakeLists.txt
